objects/CampaignInfluence.object
<CustomObject>
    <fields>
        <fullName>ExpectedRevenueShare__c</fullName>
        <description>Expected Revenue Share field for Campaign Influence Object</description>
        <formula>(Influence*Opportunity.Amount)*Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Revenue Share</inlineHelpText>
        <label>Expected Revenue Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC-2170 Legacy Reference Fields needed for Campaign Influence</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC-2170 Legacy Reference Fields needed for Campaign Influence</description>
        <externalId>true</externalId>
        <inlineHelpText>Source system record id</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC-2170 Legacy Reference Fields needed for Campaign Influence</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC-2170 Legacy Reference Fields needed for Campaign Influence</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDCampaignInfluence__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CmI{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CampaignInfluence</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>CampaignInfluence</fullName>
        <filterScope>Everything</filterScope>
        <label>CampaignInfluence</label>
        <sharedTo />
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>